Added admin dashboard + account locking
