# scent-quest-ui/src/app/services/models.ts
@@ -7,7 +7,10 @@ export { FragranceResponse } from './models/fragrance-response';
 export { NoteResponse } from './models/note-response';
 export { PageResponseFragranceResponse } from './models/page-response-fragrance-response';
 export { PageResponseReviewResponse } from './models/page-response-review-response';
+export { PageResponseUserResponse } from './models/page-response-user-response';
 export { PerfumerResponse } from './models/perfumer-response';
 export { RegistrationRequest } from './models/registration-request';
 export { ReviewRequest } from './models/review-request';
 export { ReviewResponse } from './models/review-response';
+export { UserRequest } from './models/user-request';
+export { UserResponse } from './models/user-response';
