# scent-quest-ui/src/app/services/models/user-response.ts
@@ -1,0 +1,11 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface UserResponse {
+  accountLocked?: boolean;
+  dateOfBirth?: string;
+  email?: string;
+  enabled?: boolean;
+  firstname?: string;
+  lastname?: string;
+  userId?: number;
+}
